Should have committed a long time ago in a galaxy far far away... OOPS

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -3,6 +3,7 @@
 :root {
   --off-black: #080808;
   --off-white: #f8f8f8;
+  --background-color: #C9B7C8;
   --expand-size: 0rem;
 }
 
@@ -12,7 +13,7 @@
 }
 /* Necessary for iphone 'safe' area */
 html {
-  background-color: #C9B7C8;
+  background-color: var(--background-color);
 }
 html,body,#redwood-app {
   min-height: 100vh;
@@ -40,7 +41,7 @@ h1.title {
 }
 
 
-nav {
+nav.public-layout {
   max-width: calc(550px * .95);
   padding-left: 10px;
   padding-right: 10px;
@@ -49,7 +50,7 @@ nav {
   justify-content: space-between;
 
 }
-nav a {
+nav.public-layout a {
   text-decoration: none;
   color: #f8f8f8;
   font-size: 1.5rem;
@@ -57,7 +58,7 @@ nav a {
   transition: text-shadow 100ms ease-in 0s;
 
 }
-nav a:hover, nav span:hover {
+nav.public-layout a:hover, nav.public-layout span:hover {
   text-shadow: 0 2px 2px rgb(0, 0, 0);
 }
 
@@ -136,8 +137,9 @@ footer a:hover {
   background-color: #ffffff;
   padding: 5px;
   border-radius: 5px;
+  border: none;
   font-size: .8rem;
-  cursor: pointer;
+  color: var(--off-black);
   box-shadow: 0 2px 2px rgba(0,0,0,.5);
   transition: all 100ms ease-in 0s;
 }
@@ -209,14 +211,18 @@ div.post-card div.overlay div.expandable {
 }
 .about-article-text-container a {
   text-decoration: none;
-  color: var(--off-black);
-  font-size: .7rem;
-  text-align: center;
-  display: block;
+  color: #937291;
+
 
 }
 .about-article-text-container a:hover {
   text-decoration: underline;
+}
+
+.about-article-text-container a.part-of-page {
+  font-size: .7rem;
+  text-align: center;
+  display: block;
 }
 
 .about-article-text-container h3 {
